Swagger updates - Users should be done
